<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sweet Bites</string>
    <string name="product_text_placeholder">Product</string>
    <string name="price_simple">%1$d RSD</string>
    <string name="price_complex">Price: %1$d RSD</string>
    <string name="quantity">Quantity:</string>
    <string name="quantity_value">%1$d x</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="username_placeholder">Username</string>
    <string name="password_placeholder">Password</string>
    <string name="login">Login</string>
    <string name="cart">Cart</string>
    <string name="products">Products</string>
    <string name="product_details">Product details</string>
    <string name="invalid_product">Product not found</string>
    <string name="login_required">You need to log in first</string>
    <string name="added_to_cart">Product has been added to cart</string>
    <string name="login_error">Wrong username or password</string>
    <string name="login_success">You are successfully logged in</string>
    <string name="total_price">Total: %1$d RSD</string>
    <string name="order_success">The order request was successfully sent</string>
    <string name="order">Pay</string>
    <string name="about_us">About us</string>
    <string name="about_us_description">
        Address: ul. Slatkih Snova 123, Belgrade
        \n\nPhone: +381 12 345 678
        \n\nEmail: info@slatkizalogaji.com
        \n\n\nWorking hours:
        \n\nMonday - Saturday: 9:00 - 20:00
        \n\nSunday: Closed
    </string>
    <string name="products_option">Product overview</string>
    <string name="promotions_option">Promotions</string>
    <string name="user_details">Edit user details</string>
    <string name="user_details_updated">Details successfully updated</string>
    <string name="first_name_label">Name:</string>
    <string name="last_name_label">Last name:</string>
    <string name="phone_label">Phone:</string>
    <string name="address_label">Address:</string>
    <string name="confirm">Confirm</string>
    <string name="edit_profile">Change details</string>
    <string name="change_password">Change password</string>
    <string name="logout">Logout</string>
    <string name="password_label">Password:</string>
    <string name="new_password_label">New password:</string>
    <string name="repeat_password_label">Repeated password:</string>
    <string name="password_changed">Password successfully changed</string>
    <string name="user_not_found">The user is not logged in</string>
    <string name="password_not_changed">Invalid password</string>
    <string name="username_label">Username:</string>
    <string name="buyer_text">Buyer</string>
    <string name="employee_text">Employee</string>
    <string name="sign_in_text">No account? Create an account.</string>
    <string name="all_comments_text">See comments</string>
    <string name="add_comment_text">Add a comment</string>
    <string name="comments">Comments</string>
    <string name="add_comment">Add a comment</string>
    <string name="date_text_placeholder">Date</string>
    <string name="comment_text_placeholder">Comment</string>
    <string name="enter_comment_text">Enter a comment:</string>
    <string name="enter_comment_placeholder">Please enter a comment here…</string>
    <string name="empty_comment">You must enter a comment</string>
    <string name="comment_added">Comment has been added</string>
    <string name="order_placed">Your order has been accepted.</string>
    <string name="notifications">Notifications</string>
    <string name="notification_text_placeholder">Notification</string>
    <string name="no_notifications">There are no notifications</string>
    <string name="no_comments">There are no comments</string>
    <string name="promotions">Promotions</string>
    <string name="text_placeholder">Some text</string>
    <string name="previous_symbol"><![CDATA[<]]></string>
    <string name="next_symbol"><![CDATA[>]]></string>
    <string name="no_items_in_cart">Cart is empty :(</string>
    <string name="register">Register</string>
    <string-array name="product_types">
        <item>Cakes</item>
        <item>Cookies</item>
    </string-array>
</resources>
