<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/cart_option_menu"
            android:title="@string/cart"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            app:showAsAction="ifRoom"
            android:visible="false"/>
    <item
            android:id="@+id/login_option_menu"
            android:title="@string/login"
            android:icon="@drawable/ic_baseline_login_24"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/user_option_menu"
            android:title="@string/login"
            android:icon="@drawable/ic_baseline_user_24"
            app:showAsAction="ifRoom"
            android:visible="false">
        <menu>
            <item
                    android:id="@+id/notifications_user_option"
                    android:title="@string/notifications"/>
            <item
                    android:id="@+id/edit_details_user_option"
                    android:title="@string/edit_profile"/>
            <item
                    android:id="@+id/change_password_user_option"
                    android:title="@string/change_password"/>
            <item
                    android:id="@+id/logout_user_option"
                    android:title="@string/logout"/>
        </menu>
    </item>
    <item
            android:id="@+id/promotions_option_menu"
            android:title="@string/promotions_option"/>
    <item
            android:id="@+id/products_option_menu"
            android:title="@string/products_option"/>
    <item
            android:id="@+id/about_us_option_menu"
            android:title="@string/about_us"/>
</menu>
