<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_comment_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

    <EditText
            android:id="@+id/comment_add_comment_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/enter_comment_placeholder"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:gravity="top"/>

    <Button
            android:id="@+id/confirm_btn_add_comment_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/button_color_2"
            android:textColor="@color/white"
            android:text="@string/confirm"/>
</LinearLayout>
