<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProductDetailsActivity">
    <TextView
            android:id="@+id/title_product_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/product_text_placeholder"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
            android:id="@+id/image_product_details"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="16dp"
            android:padding="8dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_product_details"/>

    <TextView
            android:id="@+id/description_product_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/product_text_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_product_details"/>

    <TextView
            android:id="@+id/price_product_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/price_complex"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_product_details"/>

    <Button
            android:id="@+id/all_comments_btn_product_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="8dp"
            android:text="@string/all_comments_text"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:backgroundTint="@color/button_color_3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/add_comment_btn_product_details"
            app:layout_constraintTop_toBottomOf="@+id/price_product_details"/>

    <Button
            android:id="@+id/add_comment_btn_product_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="64dp"
            android:text="@string/add_comment_text"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:backgroundTint="@color/button_color_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/all_comments_btn_product_details"
            app:layout_constraintTop_toBottomOf="@+id/price_product_details"/>

    <TextView
            android:id="@+id/quantity_product_details"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/quantity"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toTopOf="@id/add_to_cart_btn_product_details"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/quantity_spinner_product_details"/>

    <Spinner
            android:id="@+id/quantity_spinner_product_details"
            android:layout_width="86dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:spinnerMode="dialog"
            app:layout_constraintBottom_toTopOf="@id/add_to_cart_btn_product_details"
            app:layout_constraintLeft_toRightOf="@id/quantity_product_details"/>

    <Button
            android:id="@+id/add_to_cart_btn_product_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/add_to_cart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
