<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">
    <ImageView
            android:id="@+id/logo_register_activity"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_t"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/register_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo_register_activity">
        <TextView
                android:id="@+id/name_label_register_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/first_name_label"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="@id/register_layout"
                app:layout_constraintEnd_toStartOf="@id/name_register_activity"
                app:layout_constraintTop_toTopOf="@id/register_layout"
                app:layout_constraintBottom_toTopOf="@id/last_name_label_register_activity"/>

        <EditText
                android:id="@+id/name_register_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/name_label_register_activity"
                app:layout_constraintEnd_toEndOf="@id/register_layout"
                app:layout_constraintTop_toTopOf="@id/register_layout"/>

        <TextView
                android:id="@+id/last_name_label_register_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/last_name_label"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="@id/register_layout"
                app:layout_constraintEnd_toStartOf="@id/last_name_register_activity"
                app:layout_constraintTop_toBottomOf="@id/name_label_register_activity"
                app:layout_constraintBottom_toTopOf="@id/phone_label_register_activity"/>

        <EditText
                android:id="@+id/last_name_register_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/last_name_label_register_activity"
                app:layout_constraintEnd_toEndOf="@id/register_layout"
                app:layout_constraintTop_toBottomOf="@id/name_register_activity"/>

        <TextView
                android:id="@+id/phone_label_register_activity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/phone_label"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="@id/register_layout"
                app:layout_constraintEnd_toStartOf="@id/phone_register_activity"
                app:layout_constraintTop_toBottomOf="@id/last_name_label_register_activity"
                app:layout_constraintBottom_toTopOf="@id/address_label_register_activity"/>

        <EditText
                android:id="@+id/phone_register_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/phone_label_register_activity"
                app:layout_constraintEnd_toEndOf="@id/register_layout"
                app:layout_constraintTop_toBottomOf="@id/last_name_register_activity"/>

        <TextView
                android:id="@+id/address_label_register_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/address_label"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="@id/register_layout"
                app:layout_constraintEnd_toStartOf="@id/address_register_activity"
                app:layout_constraintTop_toBottomOf="@id/phone_label_register_activity"
                app:layout_constraintBottom_toTopOf="@id/username_label_register_activity"/>

        <EditText
                android:id="@+id/address_register_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/address_label_register_activity"
                app:layout_constraintEnd_toEndOf="@id/register_layout"
                app:layout_constraintTop_toBottomOf="@id/phone_register_activity"/>

        <TextView
                android:id="@+id/username_label_register_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/username_label"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="@id/register_layout"
                app:layout_constraintEnd_toStartOf="@id/username_register_activity"
                app:layout_constraintTop_toBottomOf="@id/address_label_register_activity"
                app:layout_constraintBottom_toTopOf="@id/password_label_register_activity"/>

        <EditText
                android:id="@+id/username_register_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/username_label_register_activity"
                app:layout_constraintEnd_toEndOf="@id/register_layout"
                app:layout_constraintTop_toBottomOf="@id/address_register_activity"/>

        <TextView
                android:id="@+id/password_label_register_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/password_label"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="@id/register_layout"
                app:layout_constraintEnd_toStartOf="@id/password_register_activity"
                app:layout_constraintTop_toBottomOf="@id/username_label_register_activity"
                app:layout_constraintBottom_toBottomOf="@id/register_layout"/>

        <EditText
                android:id="@+id/password_register_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                app:layout_constraintStart_toEndOf="@id/password_label_register_activity"
                app:layout_constraintEnd_toEndOf="@id/register_layout"
                app:layout_constraintTop_toBottomOf="@id/username_register_activity"
                app:layout_constraintBottom_toBottomOf="@id/register_layout"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RadioGroup
            android:id="@+id/radio_group_register_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_layout"
            android:orientation="horizontal">
        <RadioButton
                android:id="@+id/radio_buyer_register_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buyer_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:checked="true"
                app:layout_constraintStart_toStartOf="@id/radio_group_register_activity"
                app:layout_constraintEnd_toEndOf="@id/radio_group_register_activity"
                app:layout_constraintTop_toTopOf="@id/radio_group_register_activity"/>
        <RadioButton
                android:id="@+id/radio_employee_register_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/employee_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toEndOf="@id/radio_buyer_register_activity"
                app:layout_constraintEnd_toEndOf="@id/radio_group_register_activity"
                app:layout_constraintTop_toTopOf="@id/radio_group_register_activity"/>
    </RadioGroup>

    <Button
            android:id="@+id/confirm_btn_register_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/confirm"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_group_register_activity"/>

</androidx.constraintlayout.widget.ConstraintLayout>
