<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cart_item"
        android:elevation="3dp"
        android:padding="8dp"
        android:layout_margin="8dp">
    <TextView
            android:id="@+id/quantity_cart_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
            android:id="@+id/image_cart_item"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_t"
            app:layout_constraintStart_toEndOf="@id/quantity_cart_item"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
            android:id="@+id/name_cart_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/product_text_placeholder"
            app:layout_constraintStart_toEndOf="@id/image_cart_item"
            app:layout_constraintEnd_toStartOf="@id/price_cart_item"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
            android:id="@+id/price_cart_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/price_simple"
            android:textAlignment="viewEnd"
            app:layout_constraintStart_toEndOf="@id/name_cart_item"
            app:layout_constraintEnd_toStartOf="@id/remove_btn_cart_item"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageButton
            android:id="@+id/remove_btn_cart_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_delete_24"
            android:background="@android:color/transparent"
            app:tint="@color/button_color"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
